@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2010-04-20"
+#define RUBY_RELEASE_DATE "2010-04-19"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20100420
-#define RUBY_PATCHLEVEL 252
+#define RUBY_RELEASE_CODE 20100419
+#define RUBY_PATCHLEVEL 253
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2010
 #define RUBY_RELEASE_MONTH 4
-#define RUBY_RELEASE_DAY 20
+#define RUBY_RELEASE_DAY 19
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
